Fix typo that prevented compilation

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -39,7 +39,7 @@ introduces an approach to do just that.
   was to address reviewer feedback that we weren't clear enough on the
   definition of an environment}
 
-\texit{An application's environment is the collection of all resources
+\textit{An application's environment is the collection of all resources
 external to the application with which the application communicates.
 These external resources can be thought of as providing implicit
 inputs to the program that affect its flow of execution.
